hphp/hack/test/typecheck/is_expression/cond_is.php.like_types.exp
File "cond_is.php", line 14, characters 10-16:
Invalid return type (Typing[4110])
File "cond_is.php", line 8, characters 44-44:
Expected ~T because it is an unenforceable type
File "cond_is.php", line 14, characters 14-14:
But got B
File "cond_is.php", line 22, characters 12-13:
Invalid argument (Typing[4110])
File "cond_is.php", line 17, characters 19-19:
Expected A
File "cond_is.php", line 8, characters 44-44:
But got dynamic because it is an unenforceable type
